tests/typing/fail/super_ctor_fail.rb

class A
  def initialize()
  end
end

class B < A
  def initialize()
    super(2)
  end
end

B.new
